# autoencoded-vocal-analysis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  conda-lock.yml  environment.dev.yml  environment.train.yml  environment.yml  mypy.ini  pyproject.toml  readthedocs.yml  requirements.readthedocs.txt  requirements.txt  ruff.toml  setup.py
.beads/: issues.jsonl
ava/: __init__.py
docker/: Dockerfile.latent  Dockerfile.roi  Dockerfile.train
docs/: aws_batch_roi.md  birdsong_inventory.md  birdsong_manifest.md  birdsong_metadata.md  birdsong_roi_layout.md  birdsong_training_plan.md  cloud_full_roi_plan.md  developmental_baseline_aws_staging.md  latent_sequence_export.md  pk249_33_90_latent_access.md  temporal_topology_handoff.md
examples/: finch_warp_mwe.py  finch_window_mwe.py  mouse_sylls_mwe.py  mouse_window_mwe.py
scripts/: analyze_branch_commitment.py  analyze_developmental_replication.py  analyze_hyperbolic_development.py  ava_db_ingest.py  build_birdsong_manifest.py  build_birdsong_metadata.py  build_birdsong_single_bird_manifest.py  build_shotgun_cohort_manifests.py  compare_birdsong_roi_configs.py  compare_shotgun_development.py  evaluate_latent_metrics.py  export_latent_sequences.py  inspect_birdsong.py  inventory_developmental_replication_inputs.py  launch_birdsong_sequence_training.py  launch_birdsong_training.py  prepare_developmental_baseline_aws.py  render_training_dashboard.py  report_birdsong_roi_coverage.py  run_birdsong_roi.py  run_birdsong_validation.py  stage_developmental_baseline_inputs.py  train_vae.py  (+1 more)
(+364 files in other folders)
